--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "ng build"
+    "postinstall": "cd angular-src/src && ng build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/cli": "1.2.3",
     "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
