--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd angular-src/src && ng build"
+    "postinstall": "cd angular-src/src && npm install && ng build"
   },
   "author": "",
   "license": "ISC",
