--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "ng": "ng",
     "start": "node app.js",
     "build": "ng build --prod",
-    "test": "ng test",
+    "test": "mocha",
     "lint": "ng lint",
-    "postinstall": "ng build",
-    "poststart": "ng build"
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +24,7 @@
     "angular2-flash-messages": "^2.0.5",
     "angular2-jwt": "^0.2.3",
     "async": "^2.6.0",
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
@@ -44,6 +44,9 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,6 +55,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mocha": "^5.0.4",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
