--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "codelyzer": "^4.0.1",
+    "eslint-config-google": "^0.9.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
