--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,24 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Compiled files
+dist/
 
-# compiled output
-/dist
-/dist-server
-/tmp
-/out-tsc
+# Config file
+config/config.js
 
-# dependencies
-/node_modules
+# Node stuff
+node_modules
+.npm
+.node_repl_history
+.lock-wscript
+logs
+*.log
+npm-debug.log*
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
-
-# System Files
-.DS_Store
+# OS stuff
+Desktop.ini
+ehthumbs.db
 Thumbs.db
+$RECYCLE.BIN/
+._*
+.DS_Store
+.Spotlight-V100
+.Trashes
