--- a/package.json
+++ b/package.json
@@ -1,65 +1,54 @@
 {
-  "name": "src",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "node app.js",
-    "build": "ng build --prod",
-    "test": "mocha",
-    "lint": "ng lint",
-    "postinstall": "ng build"
+  "name": "MERN-boilerplate",
+  "version": "1.0.0",
+  "description": "MERN stack project boilerplate",
+  "author": "Eugene Cheung",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arkon/MERN-boilerplate.git"
   },
+  "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "webpack -p --progress --profile --colors && node server",
+    "start:dev": "node server"
+  },
+  "engines": {
+    "node": ">=6"
+  },
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "angular2-flash-messages": "^2.0.5",
-    "angular2-jwt": "^0.2.3",
-    "async": "^2.6.0",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "autoprefixer": "^8.2.0",
+    "babel-loader": "^8.0.0-beta.2",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.4.1",
+    "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^4.5.1",
     "cors": "^2.8.4",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.1.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.11",
+    "node-sass": "^4.7.2",
+    "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
-    "@angular/cli": "~1.7.3",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "codelyzer": "^4.0.1",
-    "eslint-config-google": "^0.9.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^5.0.4",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "postcss-loader": "^2.1.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-middleware": "^3.0.1",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-merge": "^4.1.2",
+    "whatwg-fetch": "^2.0.3"
   }
 }
