--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-react": "^7.0.0-beta.42",
     "autoprefixer": "^8.2.0",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.1.0",
@@ -33,8 +34,10 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gravatar-api": "^1.5.0",
     "html-webpack-plugin": "^3.1.0",
     "jsonwebtoken": "^8.2.1",
+    "jwt-decode": "^2.2.0",
     "mocha": "^5.1.1",
     "mongoose": "^5.0.11",
     "node-sass": "^4.7.2",
@@ -43,6 +46,7 @@
     "passport-jwt": "^4.0.0",
     "postcss-loader": "^2.1.3",
     "react": "^16.2.0",
+    "react-alert": "^2.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
